rook/rook-dashboard-http-route.yaml
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: rook-ceph-dashboard
  namespace: rook-ceph
  labels:
    app: rook
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: contour
    namespace: projectcontour
  hostnames:
  - "cephfs.ganesh.algueron.io"
  rules:
  - backendRefs:
    - kind: Service
      name: rook-ceph-mgr-dashboard
      port: 7000
